--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@pinia/nuxt": "^0.5.1",
     "pinia": "^2.1.7",
     "swiper": "^11.0.4",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-lottie": "^3.2.0"
   }
 }
