--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/seo": "^2.0.0-rc.9",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.1",
     "postcss": "^8.4.31",
