--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
     "@nuxtjs/seo": "^2.0.0-rc.9",
+    "@stefanobartoletti/nuxt-social-share": "^0.5.4",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.1",
     "postcss": "^8.4.31",
