--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
     "@nuxtjs/seo": "^2.0.0-rc.9",
+    "@sidebase/nuxt-pdf": "^1.0.0-alpha.0",
     "@stefanobartoletti/nuxt-social-share": "^0.5.4",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.1",
@@ -24,9 +25,11 @@
   "dependencies": {
     "@nuxt/image": "^1.0.0",
     "@pinia/nuxt": "^0.5.1",
+    "html2pdf.js": "^0.10.1",
     "pinia": "^2.1.7",
     "swiper": "^11.0.4",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-html2pdf": "^1.1.2",
     "vue3-lottie": "^3.2.0"
   }
 }
